# $Id: CMakeLists.txt 1320 2014-10-26 08:12:52Z justin $

lfl_clear_projects()
set(LFL_PNG 1)
set(LFL_GLES2 1)
set(LFL_LFLINPUT 1)
set(LFL_LFLVIDEO 1)
set(LFL_LIBCLANG 1)
set(LFL_FLATBUFFERS 1)
set(LFL_JSONCPP 1)

if(NOT WIN32 AND NOT LFL_ANDROID)
  set(LFL_ICONV 1)
endif()
if(LFL_ANDROID)
elseif(LFL_IPHONE)
else()
  set(LFL_GLEW 1)
  if(NOT WIN32)
    set(LFL_GLOG 1)
  endif()
endif()

lfl_project(editor)
add_subdirectory(../core/lfapp ${CMAKE_CURRENT_BINARY_DIR}/${LFL_PROJECT}_lfapp_obj)
lfapp_add_target(editor editor.cpp)
target_compile_definitions(editor PUBLIC ${LFAPP_DEF})
target_include_directories(editor PUBLIC ${LFAPP_INCLUDE})
lfapp_post_build_start(editor editor LEditor)
